traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:14: error: not found: value ligneOUEST
      ligneOUEST(compteur, abscisse, ordonnee, hauteur, largeur)
      ^TraversalZigZag:21: error: not found: value Direction
  if (getDirection() == Direction.EST)
                        ^TraversalZigZag:22: error: not found: value ligneEST
    ligneEST(compteur, abscisse, ordonnee, hauteur, largeur)
    ^TraversalZigZag:23: error: not found: value Direction
  if (getDirection() == Direction.OUEST)
                        ^TraversalZigZag:24: error: not found: value ligneOUEST
    ligneOUEST(compteur, abscisse, ordonnee, hauteur, largeur)
    ^TraversalZigZag:32: error: reassignment to val
    abscisse = abscisse + 1
             ^TraversalZigZag:40: error: reassignment to val
    abscisse = abscisse - 1
             ^